--- a/dd/s-result.html
+++ b/dd/s-result.html
@@ -8,6 +8,29 @@
 <meta name=description content="「调调」每天讲述精致的生活方式，推荐那些真正高品质的好东西，帮你低价买到优质海淘商品。拥有调调，拥有生活。">
 <link rel="stylesheet" type="text/css" href="css/s-result.css">
 <title>搜索结果</title>
+<script>
+function adjust(img){
+    var imgContainer = img.parentNode,
+        width = imgContainer.offsetWidth,
+        height = imgContainer.offsetHeight,
+        scale = (width / height).toFixed(2),
+        ratio = (img.width / img.height).toFixed(2);
+    if(Math.abs(scale - ratio) < 0.02){
+      img.width = width;
+      img.height = height;
+    }else if(scale > ratio){
+      img.width = width;
+      img.height = img.width / ratio;
+         // 图片上移
+      img.style.marginTop = -(img.height - height)/2 + "px" ;
+    }else{
+      img.height = height;
+      img.width = img.height * ratio;
+         // 图片右移
+      img.style.marginLeft = -(img.width - width)/2 + "px";
+    }
+}
+</script>
 </head>
 <body>
 <div class="wrapper">
@@ -43,7 +66,6 @@
  			<div class="search-content">
  				<form action="s-result.html" class="search-form" name="search">
 				<input placeholder="你想要的，都在这里" type="text" id="search-input" class="search-input" name="q" maxlength="100" autocomplete="off">
-				<!-- <a href="javascript:;" id="deleteAll" title="清空" class="deleteAll disnone"></a> -->
  				<input type="submit" id="sub" class="btn" value="">
  				</form>
  			</div>
@@ -65,16 +87,16 @@
          <div class="present-area" style="display:none"> 
             <!-- 礼物筛选器 -->
             <div class="present-filter">
-                <div class="present-type clearfix">
+                <div class="present-type clearfix scene">
                     <h2>场景</h2>
                     <ul>
-                        <li class="cur-select">情人节</li><li>告白</li>
+                        <li>情人节</li><li>告白</li>
                         <li>生日</li><li>纪念日</li>
                         <li>新婚</li><li>乔迁</li>
                         <li>感恩节</li><li>圣诞节</li>
                     </ul>
                 </div>
-                <div class="present-type clearfix">
+                <div class="present-type clearfix relation">
                     <h2>关系</h2>
                     <ul>
                         <li>爸爸</li><li>妈妈</li>
@@ -83,7 +105,7 @@
                         <li>朋友同事</li><li>老板</li>
                     </ul>
                 </div>
-                <div class="present-type clearfix">
+                <div class="present-type clearfix character">
                     <h2>性格</h2>
                     <ul>
                         <li>二次元</li><li>小清新</li>
@@ -92,7 +114,7 @@
                         <li>搞怪</li><li>成熟</li>
                     </ul>
                 </div>
-                <div class="present-type clearfix">
+                <div class="present-type clearfix price">
                     <h2>价格</h2>
                     <ul>
                         <li>0-200</li><li>200-500</li>
@@ -101,59 +123,18 @@
                 </div>
             </div>
             <!-- 卡片 -->
-            <div class="present-result">
-              <ul class="goodthing-list clearfix">
-                  <li class="goodthing">
-                    <a href="" target="_blank">
-                        <div class="img-container">
-                            <img src="http://a.diaox2.com/cms/sites/default/files/20150603/goodthing/cov.jpg" alt="" onload="adjust(this)" width="380" height="310">
-                        </div>  
-                        <div class="goodthing-highlight">
-                            <h2>
-                                <div>一人是，也要美美的啊一人是，也要美美的啊一人是的的的的是是是的的是是是一人是，也要美美的啊一人是，也要美美的啊一人是的的的的是是是的的是是是</div>
-                            </h2>
-                            <ul class="icon-list clearfix">
-                                <li class="icon-item f-l">
-                                    <i class="icon icon-s"></i>
-                                    <span>123</span>
-                                </li>
-                                <li class="icon-item f-r">
-                                    <i class="icon icon-s"></i>
-                                    <span>123</span>
-                                </li>
-                                <li class="icon-item f-r">
-                                    <i class="icon icon-z"></i>
-                                    <span>123</span>
-                                </li>
-                            </ul>
-                        </div>
-                    </a>
-                  </li>
-              </ul>
-            </div>
+            <div class="present-result"><ul class="goodthing-list clearfix"></ul></div>
         </div>
         <!-- 礼物问答机代码 end-->
 		</div>
 		<!-- 左侧热门区 -->
 		<div class="hot-topics-area f-l">
-			<h2 class="hot-topics">
-				<img src="images/hot-topics.png">
-				热门专题
-			</h2>
-			<ul class="special">
-				 <!-- <li class="loading">
-					<a href="#">
-                    <img src="http://a.diaox2.com/cms/sites/default/files/20150914/zk/fm.jpg" alt="" width="277" height="180">
-                    <p>女朋友生气了？调调帮你哄！</p>
-                    <span>7个招数</span>
-                    <div class="black-musk"></div>
-                    </a>
-				</li>-->
-             </ul>
-             <a target="_blank" href="http://diaox2.com/downloads" class="erweima">
-                <span>更多精彩<br>下载APP</span>
-                <img src="images/download_96.jpg" width="96" height="96" alt="扫码下载调调">
-            </a>
+			<h2 class="hot-topics"><img src="images/hot-topics.png">热门专题</h2>
+			<ul class="special"></ul>
+      <a target="_blank" href="http://diaox2.com/downloads" class="erweima">
+        <span>更多精彩<br>下载APP</span>
+        <img src="images/download_96.jpg" width="96" height="96" alt="扫码下载调调">
+     </a>
 		</div>
 	</div>
 </div>
@@ -173,10 +154,7 @@
 </div>
 </div>
 <script src="js/jquery.js"></script>
-<script src="js/DDAjax.js"></script>
 <script src="js/result.js" defer='defer'></script>
 <script src="js/login.js" defer='defer'></script>
-<script>var _hmt=_hmt||[];(function(){var hm=document.createElement("script");hm.src="//hm.baidu.com/hm.js?396423d2e0192e71004b302c60d2d5a9";var s=document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm,s);})();
-</script>
 </body>
 </html>
