--- a/dd/s-result.html
+++ b/dd/s-result.html
@@ -90,35 +90,49 @@ function adjust(img){
                 <div class="present-type clearfix scene">
                     <h2>场景</h2>
                     <ul>
-                        <li>情人节</li><li>告白</li>
-                        <li>生日</li><li>纪念日</li>
-                        <li>新婚</li><li>乔迁</li>
-                        <li>感恩节</li><li>圣诞节</li>
+                        <li data-group="scene" data-title="七夕情人节">情人节</li>
+                        <li data-group="scene" data-title="告白">告白</li>
+                        <li data-group="scene" data-title="生日">生日</li>
+                        <li data-group="scene" data-title="纪念日">纪念日</li>
+                        <li data-group="scene" data-title="新婚">新婚</li>
+                        <li data-group="scene" data-title="乔迁">乔迁</li>
+                        <li data-group="scene" data-title="感恩节">感恩节</li>
+                        <li data-group="scene" data-title="圣诞节">圣诞节</li>
                     </ul>
                 </div>
                 <div class="present-type clearfix relation">
                     <h2>关系</h2>
                     <ul>
-                        <li>爸爸</li><li>妈妈</li>
-                        <li>老公男友</li><li>老婆女友</li>
-                        <li>基友</li><li>闺蜜</li>
-                        <li>朋友同事</li><li>老板</li>
+                        <li data-group="relation" data-title="爸爸">爸爸</li>
+                        <li data-group="relation" data-title="妈妈">妈妈</li>
+                        <li data-group="relation" data-title="老公男友">老公男友</li>
+                        <li data-group="relation" data-title="老婆女友">老婆女友</li>
+                        <li data-group="relation" data-title="基友">基友</li>
+                        <li data-group="relation" data-title="闺密">闺蜜</li>
+                        <li data-group="relation" data-title="同事朋友">朋友同事</li>
+                        <li data-group="relation" data-title="老板">老板</li>
                     </ul>
                 </div>
                 <div class="present-type clearfix character">
                     <h2>性格</h2>
                     <ul>
-                        <li>二次元</li><li>小清新</li>
-                        <li>萌萌哒</li><li>GEEK</li>
-                        <li>潮人</li><li>文艺范</li>
-                        <li>搞怪</li><li>成熟</li>
+                        <li data-group="character" data-title="二次元">二次元</li>
+                        <li data-group="character" data-title="小清新">小清新</li>
+                        <li data-group="character" data-title="萌萌哒">萌萌哒</li>
+                        <li data-group="character" data-title="Geek">Geek</li>
+                        <li data-group="character" data-title="潮人">潮人</li>
+                        <li data-group="character" data-title="文艺范">文艺范</li>
+                        <li data-group="character" data-title="搞怪">搞怪</li>
+                        <li data-group="character" data-title="成熟">成熟</li>
                     </ul>
                 </div>
                 <div class="present-type clearfix price">
                     <h2>价格</h2>
                     <ul>
-                        <li>0-200</li><li>200-500</li>
-                        <li>500-800</li><li>800+</li>
+                        <li data-group="price" data-title="0-200">0-200</li>
+                        <li data-group="price" data-title="200-500">200-500</li>
+                        <li data-group="price" data-title="500-800">500-800</li>
+                        <li data-group="price" data-title="800-">800+</li>
                     </ul>
                 </div>
             </div>
