--- a/dd/load.html
+++ b/dd/load.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
 <title></title>
+<style>
+/*swallows 单词 燕尾的意思*/
+.swallows{
+    border-width: 20px;
+    border-style: solid;
+    border-color: #f72862 #fff;
+}
+</style>
 </head>
 <body>
-
 <script>
     var oBody = document.body;
     oBody.onunload = function(){
@@ -19,4 +26,5 @@
     }
 </script>    
 </body>
+<div class="swallows"></div>
 </html>
