--- a/dd/s-result.html
+++ b/dd/s-result.html
@@ -97,7 +97,7 @@ function adjust(img){
                         <li data-group="scene" data-title="新婚">新婚</li>
                         <li data-group="scene" data-title="乔迁">乔迁</li>
                         <li data-group="scene" data-title="感恩节">感恩节</li>
-                        <li data-group="scene" data-title="圣诞节">圣诞节</li>
+                        <li data-group="scene" data-title="圣诞节平安夜">圣诞节</li>
                     </ul>
                 </div>
                 <div class="present-type clearfix relation">
@@ -137,7 +137,9 @@ function adjust(img){
                 </div>
             </div>
             <!-- 卡片 -->
-            <div class="present-result"><ul class="goodthing-list clearfix"></ul></div>
+            <div class="present-result">
+            <ul class="goodthing-list clearfix" id="goodthing-list"></ul>
+            </div>
         </div>
         <!-- 礼物问答机代码 end-->
 		</div>
