--- a/dd/test.html
+++ b/dd/test.html
@@ -146,5 +146,7 @@ new GetNum({
   console.log("success");
 }).getStat();
  </script>
+ <div id="div1"></div>
+ <div id="div2"></div>
 </body>
 </html>
