--- a/dd/towel/towel.html
+++ b/dd/towel/towel.html
@@ -18,53 +18,34 @@
 </head>
 <body>
 <div class="wrapper">
-<section class="sect1">
+<section>
 <img src="images/index-b1.png" alt="">
 <a href="javascript:;" class="btn">立即分享 免费领取</a>
 <a href="javascript:;" class="link">直接购买>></a>   
 </section>
-<section>
+<section class="sect1">
 <img src="images/index-b2.png" alt="">
+<a href="javascript:;" class="btn">立即分享 免费领取</a>
+<a href="javascript:;" class="link">直接购买>></a>   
 </section>
 <section>
 <img src="images/index-b3.png" alt="">   
 </section>
 </div>
 <script>
-// 分享成功
-function success(url){
+    
+    // document.addEventListener('DOMContentLoaded',function(){
+    //     alert(1);
+    // })
+ document.addEventListener('DOMContentLoaded'.function(){
+
+ })
+ function success(){
     var section1 = document.querySelector('.sect1');
     var img = section1.querySelector('img');
-    var btn = section1.querySelector('.btn');
     img.src = 'images/share-succ-b1.png';
-    btn.href = url;
-}
-// 分享
-function share(){
-    var section1 = document.querySelector('.sect1');
-    var img = section1.querySelector('img');
-    var btn = section1.querySelector('.btn');
-    img.src = 'images/share-b1.png';
-    btn.innerHTML = '下载调调，立即领取';
-    btn.href = "http://www.diaox2.com/wapdown.php"
-    section1.removeChild(section1.querySelector('.link'));
-}
-// 分享失败
-function fail(){
-    var section1 = document.querySelector('.sect1');
-    var img = section1.querySelector('img');
-    var btn = section1.querySelector('.btn');
-    img.src = 'images/share-fail-b1.png';
-    // btn.href = url;
-}
-// 活动结束
-function end(){
-    var section1 = document.querySelector('.sect1');
-    var img = section1.querySelector('img');
-    var btn = section1.querySelector('.btn');
-    img.src = 'images/share-end-b1.png';
-    // btn.href = url;
-}
+
+ }
 </script>
 </body>
 </html>
