--- a/dd/towel/share.html
+++ b/dd/towel/share.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 <meta name="renderer" content="webkit|ie-stand">
 <meta name="description" content="「调调」每天讲述精致的生活方式，推荐那些真正高品质的好东西，帮你低价买到优质海淘商品。拥有调调，拥有生活。">
 <meta name="MobileOptimized" content="320">
@@ -19,15 +18,9 @@
 <body>
  <div class="wrapper">
 <section>
- <img src="images/share-b1.png" alt="">
- <a href="javascript:;" class="btn-share">立即分享 免费领取</a>
+<div class="mask"><div class="double-bounce1"></div><div class="double-bounce2"></div></div><img src="images/share-b1.jpg" alt="" width="6.4rem" height="10.88rem"></section>
+<section><img src="images/share-b2.jpg" alt="" width="6.4rem" height="11.36rem"><a href="http://www.diaox2.com/wapdown.php" class="btn-share">下载调调 立即领取</a>
 </section>
-<section>
- <img src="images/share-b2.png" alt="">
-</section>
-<section class="sec-share">
- <img src="images/share-b3.png" alt="">   
-</section>
+<section class="sec-share"><img src="images/share-b3.jpg" alt="" width="6.4rem" height="4.04rem"></section>
 </div>
-</body>
-</html>
+<script>window.onload = function(){document.querySelector('.mask').style.display = "none";}</script></body></html>
