--- a/dd/404.html
+++ b/dd/404.html
@@ -6,7 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 <meta name="renderer" content="webkit|ie-stand">
 <link rel="icon" href="http://a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
-<meta name=description content="「调调」每天讲述精致的生活方式，推荐那些真正高品质的好东西，帮你低价买到优质海淘商品。拥有调调，拥有生活。">
+<meta name=description content="调调DIAOX2.COM,讲述精致生活,推荐品质好物。找到最值得买的品牌好物,海淘折扣,介绍使用经验和体验测评,推荐新奇有趣礼物,送男女朋友父母长辈,介绍全球美食和旅游攻略,分类页提供家具品牌,生活用品,电器,办公文具,时尚单品,化妆品,护理保湿,数码产品,母婴用品和户外装备的品牌,价格,评测信息">
+<meta name="keywords" content="调调,DIAOX2.COM,品质生活方式,值得买,推荐礼物,海淘折扣,使用经验,评测,测评,旅游攻略,吃喝指南,家具,生活用品,家用电器,办公文具,时尚单品,护理保湿,数码产品,母婴用品,户外装备">
 <link rel="stylesheet" type="text/css" href="css/404.css">
 </head>
 <body>
@@ -44,7 +45,7 @@
         </p>
  		<div class="search-wrapper">
  			<div class="search-content">
- 				<form action="s-result.html" class="search-form" name="search">
+ 				<form action="http://www.diaox2.com/s-result.html" class="search-form" name="search">
 				<input placeholder="试试搜索其他好物吧" type="text" id="search-input" class="search-input" name="q" maxlength="100" autocomplete="off">
  				<input type="submit" id="sub" class="btn" value="">
  				</form>
@@ -68,7 +69,7 @@
 </div>
 </div>
 <script src="js/jquery.js"></script>
-<script src="js/index.js" defer='defer'></script>
+<script src="js/index.js" defer='defer'></script>   
 <script src="js/login.js" defer='defer'></script>
 </body>
 </html>
