--- a/dd/index.html
+++ b/dd/index.html
@@ -11,7 +11,7 @@
 <link rel="icon" href="http://a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
 <meta name=description content="「调调」每天讲述精致的生活方式，推荐那些真正高品质的好东西，帮你低价买到优质海淘商品。拥有调调，拥有生活。">
 <link rel="stylesheet" type="text/css" href="css/index.css">
-<title>调调 - 推荐全球品质好物2</title>
+<title>调调 - 推荐全球品质好物</title>
 </head>
 <body>
 <div class="wrapper">
