--- a/dd/s-result.html
+++ b/dd/s-result.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
+<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 <meta name="renderer" content="webkit|ie-stand">
 <link rel="icon" href="http://a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
-<meta name=description content="「调调」每天讲述精致的生活方式，推荐那些真正高品质的好东西，帮你低价买到优质海淘商品。拥有调调，拥有生活。">
+<meta name=description content="调调DIAOX2.COM,讲述精致生活,推荐品质好物。找到最值得买的品牌好物,海淘折扣,介绍使用经验和体验测评,推荐新奇有趣礼物,送男女朋友父母长辈,介绍全球美食和旅游攻略,分类页提供家具品牌,生活用品,电器,办公文具,时尚单品,化妆品,护理保湿,数码产品,母婴用品和户外装备的品牌,价格,评测信息">
+<meta name="keywords" content="调调,DIAOX2.COM,品质生活方式,值得买,推荐礼物,海淘折扣,使用经验,评测,测评,旅游攻略,吃喝指南,家具,生活用品,家用电器,办公文具,时尚单品,护理保湿,数码产品,母婴用品,户外装备">
 <link rel="stylesheet" type="text/css" href="css/s-result.css">
 <title>搜索结果</title>
-<script>
+<script type="text/javascript">
 function adjust(img){
   // console.log(img);
     var imgContainer = img.parentNode,
@@ -41,7 +43,7 @@ function adjust(img){
  			<li class="logo f-l"><a href="index.html">
  			<img src="images/logo-top.png" alt="" width="70" height="40"></a></li>			
  			<li class="index f-l" style="margin-left:30px;"><a href="index.html">首页</a></li>			
- 			<li class="category f-l"><a href="category.html">分类</a></li>	
+ 			<li class="category f-l"><a href="category/100003.html">分类</a></li>	
  			<li class="down-app f-l">
  			<i class="header-app-icon"></i>
  			<a href="http://www.diaox2.com" target="_blank">下载APP</a></li>	
@@ -93,6 +95,7 @@ function adjust(img){
                         <li data-group="scene" data-title="乔迁">乔迁</li>
                         <li data-group="scene" data-title="感恩节">感恩节</li>
                         <li data-group="scene" data-title="圣诞节平安夜">圣诞节</li>
+                        <li data-group="scene" data-title="万圣节">万圣节</li>
                     </ul>
                 </div>
                 <div class="present-type clearfix relation">
@@ -103,7 +106,7 @@ function adjust(img){
                         <li data-group="relation" data-title="老公男友">老公男友</li>
                         <li data-group="relation" data-title="老婆女友">老婆女友</li>
                         <li data-group="relation" data-title="基友">基友</li>
-                        <li data-group="relation" data-title="闺密">闺蜜</li>
+                        <li data-group="relation" data-title="闺蜜">闺蜜</li>
                         <li data-group="relation" data-title="朋友同事">朋友同事</li>
                         <li data-group="relation" data-title="老板">老板</li>
                     </ul>
@@ -140,9 +143,7 @@ function adjust(img){
         <!-- 礼物问答机代码 end-->
         <div class="no-result clearfix disnone">
           <i class="no-result-face f-l"></i>
-          <p class="f-l">
-            找不到<span class="target-word"></span>，换个关键词试试
-          </p>
+          <p class="f-l">找不到<span class="target-word"></span>，换个关键词试试</p>
          </div>
 		</div>
 		<!-- 左侧热门区 -->
@@ -171,8 +172,8 @@ function adjust(img){
 </ul>
 </div>
 </div>
-<script src="js/jquery.js"></script>
-<script src="js/result.js" defer='defer'></script>
-<script src="js/login.js" defer='defer'></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/result.js" defer='defer'></script>
+<script type="text/javascript" src="js/login.js" defer='defer'></script>
 </body>
 </html>
