--- a/dd/article.html
+++ b/dd/article.html
@@ -205,8 +205,8 @@
 </div>
 <!-- 登录弹出框 end-->
 <!-- 分享布局 start -->
-<div class="share-mask"></div>
-<div class="share-area">
+<div class="share-mask disnone"></div>
+<div class="share-area disnone">
 <i class="share-close"></i>
 <div class="share-method">
     <h2 class="share-title">分享到</h2>
