--- a/dd/index.html
+++ b/dd/index.html
@@ -2,10 +2,10 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
+<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 <meta http-equiv="Cache-Control" content="cache">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="set-cookie" content="name=liyanfeng">
-<!-- <META http-equiv="Refresh" CONTENT="5"> -->
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 <meta name="renderer" content="webkit|ie-stand">
 <link rel="icon" href="http://a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
@@ -21,7 +21,9 @@
  			<li class="logo f-l"><a href="index.html">
  			<img src="images/logo-top.png" alt="" width="70" height="40"></a></li>			
  			<li class="index f-l current-page" style="margin-left:30px;"><a href="index.html">首页</a></li>			
- 			<li class="category f-l"><a href="category.html">分类</a></li>	
+ 			<li class="category f-l"><a href="zdm.html">值得买</a></li>	
+ 			<li class="category f-l"><a href="/category/100003.html">分类</a></li>
+ 			<li class="category f-l"><a href="/s-result.html?q=礼物">礼物</a></li>	
  			<li class="down-app f-l">
  			<i class="header-app-icon"></i>
  			<a target="_blank" href="http://www.diaox2.com">下载APP</a></li>	
