修复数组删除跳过bug

--- a/dd/load.html
+++ b/dd/load.html
@@ -16,13 +16,13 @@
 <script>
     var oBody = document.body;
     oBody.onunload = function(){
-        console.log('onunload')
+        console.log('onunload');
     }
     oBody.onload = function(){
-        console.log('onload')
+        console.log('onload');
     }
     oBody.onbeforeunload = function(){
-        console.log('onbeforeunload')
+        console.log('onbeforeunload');
     }
 </script>    
 </body>
