--- a/dd/scene.html
+++ b/dd/scene.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
 <title>场景化</title>
@@ -17,8 +17,10 @@
         <ul class="f-l">
             <li class="logo f-l"><a href="index.html">
             <img src="images/logo-top.png" alt="" width="70" height="40"></a></li>          
-            <li class="index f-l" style="margin-left:30px;"><a href="index.html">首页</a></li>    
+            <li class="index f-l" style="margin-left:30px;"><a href="index.html">首页</a></li> 
+            <li class="category f-l"><a href="/zdm.html">值得买</a></li>
             <li class="category f-l"><a href="category.html">分类</a></li>    
+            <li class="category f-l"><a href="/s-result.html?q=礼物">礼物</a></li>
             <li class="down-app f-l">
             <i class="header-app-icon"></i>
             <a href="http://www.diaox2.com" target="_blank">下载APP</a></li>  
