--- a/dd/category.html
+++ b/dd/category.html
@@ -40,7 +40,7 @@ function adjust(img){
       <li class="logo f-l"><a href="index.html">
       <img src="images/logo-top.png" alt="" width="70" height="40"></a></li>      
       <li class="index f-l" style="margin-left:30px;"><a href="index.html">首页</a></li> 
-      <li class="category f-l"><a href="zdm.html">值得买</a></li>
+      <li class="category f-l"><a href="/zdm.html">值得买</a></li>
       <li class="category f-l current-page"><a href="/category/100003.html">分类</a></li>  
       <li class="category f-l"><a href="/s-result.html?q=礼物">礼物</a></li>
       <li class="down-app f-l">
