礼物页实现逻辑修改

--- a/dd/article.html
+++ b/dd/article.html
@@ -100,7 +100,10 @@
                 </p>
                 <div class="article-img">
                     <img src="http://a.diaox2.com/cms/sites/default/files/20141009/firstpage/01.jpg" alt="" width="596" height="596">
-                </div>
+                </div> 
+                <p>
+                    <img id="pending" src="http://content.image.alimmdn.com/cms/sites/default/files/20160513/goodthing/684f5dc9gw1f1aktqwmmkg20wf0b0n6s.gif" alt="" width="1167" height="396">
+                </p>
                 <p class="lift"><em class="em">左图为梦露佩戴着MIKIMOTO经典款珠链；中图为2007年汤唯出席台湾金马奖颁奖典礼时，佩戴MIKIMOTO珍珠钻石项链；右图为2008年，安吉丽娜·朱莉佩戴MIKIMOTO经典款珍珠耳环亮相2008年纽约电影节</em></p>
                 <h2>
                     坚果、南北干货、意面，都需要具备密封功能的收纳盒保护。
