--- a/dd/s-result.html
+++ b/dd/s-result.html
@@ -89,7 +89,7 @@ function adjust(img){
                 <div class="present-type clearfix scene">
                     <h2>场景</h2>
                     <ul>
-                        <li data-group="scene" data-title="圣诞节平安夜">圣诞节</li>
+                       <!--  <li data-group="scene" data-title="圣诞节平安夜">圣诞节</li>
                         <li data-group="scene" data-title="新年">新年</li>
                         <li data-group="scene" data-title="过年回家">过年回家</li>
                         <li data-group="scene" data-title="七夕情人节">情人节</li>
@@ -97,33 +97,42 @@ function adjust(img){
                         <li data-group="scene" data-title="纪念日">纪念日</li>
                         <li data-group="scene" data-title="告白" id="test">告白</li>
                         <li data-group="scene" data-title="乔迁">乔迁</li>
-                        <li data-group="scene" data-title="新婚">新婚</li>
+                        <li data-group="scene" data-title="新婚">新婚</li> -->
+
+                        <li data-group="scene" data-title="生日" data-keywords="庆生,过生日,破蛋日">生日</li>
+                        <li data-group="scene" data-title="告白" data-keywords="表白">告白</li>
+                        <li data-group="scene" data-title="纪念日" data-keywords="纪念日,结婚纪念日,纪念,周年纪念">纪念日</li>
+                        <li data-group="scene" data-title="七夕情人节" data-keywords="七夕,情人节">七夕</li>
+                        <li data-group="scene" data-title="新婚" data-keywords="结婚,婚礼">新婚</li>
+                        <li data-group="scene" data-title="乔迁" data-keywords="搬家,进新房,迁居,新房,新家,新居">乔迁</li>
+                        <li data-group="scene" data-title="母亲节" data-keywords="妈妈,母亲,老妈,妈咪,娘,麻麻,娘,娘亲">母亲节</li>
+                        <li data-group="scene" data-title="父亲节" data-keywords="爸爸,父亲,老爸,老爹,爹,爸,老父">父亲节</li>
                     </ul>
                 </div>
                 <div class="present-type clearfix relation">
                     <h2>关系</h2>
                     <ul>
-                        <li data-group="relation" data-title="爸爸">爸爸</li>
-                        <li data-group="relation" data-title="妈妈">妈妈</li>
-                        <li data-group="relation" data-title="老公男友">老公男友</li>
-                        <li data-group="relation" data-title="老婆女友">老婆女友</li>
-                        <li data-group="relation" data-title="基友">基友</li>
-                        <li data-group="relation" data-title="闺蜜">闺蜜</li>
-                        <li data-group="relation" data-title="朋友同事">朋友同事</li>
-                        <li data-group="relation" data-title="老板">老板</li>
+                        <li data-group="relation" data-title="爸爸" data-keywords="爸爸,父亲,老爸,老爹,爹,爸,老父">爸爸</li>
+                        <li data-group="relation" data-title="妈妈" data-keywords="妈妈,母亲,老妈,妈咪,娘,麻麻,娘,娘亲">妈妈</li>
+                        <li data-group="relation" data-title="老公男友" data-keywords="老公,男友,男票,男朋友,男盆友,BF">老公男友</li>
+                        <li data-group="relation" data-title="老婆女友" data-keywords="老婆,女友,女票,女朋友,女盆友,GF">老婆女友</li>
+                        <li data-group="relation" data-title="基友" data-keywords="基友,男性朋友,男生,男性,男同学">基友</li>
+                        <li data-group="relation" data-title="闺蜜" data-keywords="闺蜜,女性朋友,女生,女性,女同学">闺蜜</li>
+                        <li data-group="relation" data-title="朋友同事" data-keywords="朋友,同事,普通朋友,盆友,同学,普通同学">朋友同事</li>
+                        <li data-group="relation" data-title="老板" data-keywords="老板,领导,老师,导师,上司,上级,boss">老板</li>
                     </ul>
                 </div>
                 <div class="present-type clearfix character">
                     <h2>性格</h2>
                     <ul>
-                        <li data-group="character" data-title="二次元">二次元</li>
-                        <li data-group="character" data-title="小清新">小清新</li>
-                        <li data-group="character" data-title="萌萌哒">萌萌哒</li>
-                        <li data-group="character" data-title="Geek">Geek</li>
-                        <li data-group="character" data-title="潮人">潮人</li>
-                        <li data-group="character" data-title="文艺范">文艺范</li>
-                        <li data-group="character" data-title="搞怪">搞怪</li>
-                        <li data-group="character" data-title="成熟">成熟</li>
+                        <li data-group="character" data-title="二次元" data-keywords="次元">二次元</li>
+                        <li data-group="character" data-title="小清新" data-keywords="清新">小清新</li>
+                        <li data-group="character" data-title="萌萌哒" data-keywords="萌萌,萌,萌物">萌萌哒</li>
+                        <li data-group="character" data-title="Geek" data-keywords="极客,技术宅,技术流">Geek</li>
+                        <li data-group="character" data-title="潮人" data-keywords="潮流,时尚">潮人</li>
+                        <li data-group="character" data-title="文艺范" data-keywords="文艺">文艺范</li>
+                        <li data-group="character" data-title="搞怪" data-keywords="怪咖">搞怪</li>
+                        <li data-group="character" data-title="成熟" data-keywords="熟女,熟男,大叔">成熟</li>
                     </ul>
                     </ul>
                 </div>
