--- a/dd/index-09-16.html
+++ b/dd/index-09-16.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <script type="text/javascript" src="js/jump.js"></script>
-<title>有调-讲述精致生活,推荐品质好物,介绍购买指南,海淘折扣,体验评测,吃喝旅行攻略,时尚搭配经验</title>
+<title>调调-讲述精致生活,推荐品质好物,介绍购买指南,海淘折扣,体验评测,吃喝旅行攻略,时尚搭配经验</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 <meta name="renderer" content="webkit">
-<link rel="stylesheet" type="text/css" href="css/index.css">
+<link rel="stylesheet" type="text/css" href="css/index-09-16.css">
 <link rel="icon" href="http://a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
-<meta name="keywords" content="有调,DIAOX2.COM,品质生活方式,值得买,推荐礼物,海淘折扣,使用经验,评测,测评,旅游攻略,吃喝指南,家具,生活用品,家用电器,办公文具,时尚单品,护理保湿,数码产品,母婴用品,户外装备">
-<meta name="description" content="有调DIAOX2.COM,讲述精致生活,推荐品质好物。找到最值得买的品牌好物,海淘折扣,介绍使用经验和体验测评,推荐新奇有趣礼物,送男女朋友父母长辈,介绍全球美食和旅游攻略,分类页提供家具品牌,生活用品,电器,办公文具,时尚单品,化妆品,护理保湿,数码产品,母婴用品和户外装备的品牌,价格,评测信息">
+<meta name="keywords" content="调调,DIAOX2.COM,品质生活方式,值得买,推荐礼物,海淘折扣,使用经验,评测,测评,旅游攻略,吃喝指南,家具,生活用品,家用电器,办公文具,时尚单品,护理保湿,数码产品,母婴用品,户外装备">
+<meta name="description" content="调调DIAOX2.COM,讲述精致生活,推荐品质好物。找到最值得买的品牌好物,海淘折扣,介绍使用经验和体验测评,推荐新奇有趣礼物,送男女朋友父母长辈,介绍全球美食和旅游攻略,分类页提供家具品牌,生活用品,电器,办公文具,时尚单品,化妆品,护理保湿,数码产品,母婴用品和户外装备的品牌,价格,评测信息">
 </head>
 <script type="text/javascript">
 function adjust(img){
@@ -53,7 +53,11 @@ var _hmt = _hmt || [];
                         <input type="text" id="search-input" class="search-input" name="q" maxlength="100" autocomplete="off">
                         <input type="submit" id="sub" class="btn" value="">
               </form>
+
               <a href="download.html" class="download-btn f-r" target="_blank">下载APP</a>
+              
+              <a href="subscribe.html#login" id="login-btn" class="login-btn f-r">登录</a>
+
           </div>
       </div>
       <!-- header通用样式start -->
@@ -64,9 +68,10 @@ var _hmt = _hmt || [];
                 <li class="category f-l"><a href="zdm.html">值得买</a></li>
                 <li class="category f-l"><a href="./category/100003.html">分类</a></li>    
                 <li class="category f-l"><a href="s-result.html?q=礼物">礼物</a></li>
+                <li class="category f-l"><a href="subscribe.html#login">资讯订阅</a></li> 
                 <li class="down-app f-l">
                 <i class="header-app-icon"></i>
-                <a href="download.html" target="_blank">下载APP</a></li>
+                <a href="download.html" target="_blank">下载APP</a></li> 
             </ul>
             <form action="s-result.html" class="search-form f-r" name="search">
                     <input type="text" id="search-input" class="search-input" name="q" maxlength="100" autocomplete="off">
@@ -93,7 +98,7 @@ var _hmt = _hmt || [];
  <div class="footer-area clearfix">
    <div class="footer-top">
     <div class="footer-top-area f-l">
-      <div class="footer-logo"><img src="images/diaox2-logo-40.png" alt="" width="24" height="24"><span>有调</span>
+      <div class="footer-logo"><img src="images/diaox2-logo-40.png" alt="" width="24" height="24"><span>调调</span>
       </div>
       <h1>全球首家[生活好物搜索引擎]<br>帮你找到真正值得买的好东西</h1>
       <p class="bd"><a href="mailto:bd@diaox2.com">商务合作：bd@diaox2.com</a></p>
@@ -103,12 +108,12 @@ var _hmt = _hmt || [];
       <h2>关于我们</h2>
       <ul>
       <!-- 这他妈的要注意了，已经出现了2次问题了，为什么不把它改好呢？ -->
-        <li><a href="about.html" target="_blank">关于有调</a></li>
+        <li><a href="about.html" target="_blank">关于调调</a></li>
         <li><a href="about.html#bd" target="_blank">商务合作</a></li>
         <li><a href="about.html#joinus" target="_blank">加入我们</a></li>
         <li><a href="about.html#team" target="_blank">团队专访</a></li>
 
-         <!-- <li><a href="new_about.html" target="_blank">关于有调</a></li>
+         <!-- <li><a href="new_about.html" target="_blank">关于调调</a></li>
         <li><a href="new_about.html#bd" target="_blank">商务合作</a></li>
         <li><a href="new_about.html#joinus" target="_blank">加入我们</a></li>
         <li><a href="new_about.html#team" target="_blank">团队专访</a></li> -->
@@ -121,28 +126,25 @@ var _hmt = _hmt || [];
     </div>
     <div class="share-area f-r">
      <ul class="clearfix">
-     <li class="f-l"><a title="关注有调微博，get更多好物" href="http://weibo.com/diaox2?is_all=1" target="_blank"><img src="images/wb-footer.png" alt="" height="20" width="20"></a></li>
+     <li class="f-l"><a title="关注调调微博，get更多好物" href="http://weibo.com/diaox2?is_all=1" target="_blank"><img src="images/wb-footer.png" alt="" height="20" width="20"></a></li>
        <li class="wx-footer f-l">
        <img class="wx-footer-hover-erweima" height="140" width="140" src="images/wx-footer-hover-erweima.png" alt="" title="打开手机微信，扫一扫">
-       <img title="打开手机微信，扫一扫，关注有调公众号，get更多好物" src="images/wx-footer.png" alt="" height="20" width="20"></li>
+       <img title="打开手机微信，扫一扫，关注调调公众号，get更多好物" src="images/wx-footer.png" alt="" height="20" width="20"></li>
      </ul>
    </div>
    </div>
    <div class="footer-bottom">
-   <a href="http://www.miitbeian.gov.cn/">京ICP备13028922</a>
-    <!--  <p class="site-name"><span class="cicle-c">©</span>有调2016 <a class="icp-num" href="http://www.miitbeian.gov.cn/" target="_blank">京ICP备13028922</a>
-       有调 采用署名-非商业性使用-禁止演绎 4.0 <a class="zh" href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh" target="_blank">国际许可证协议</a> 进行许可</p>
+     <p class="site-name"><span class="cicle-c">©</span>调调2016 <a class="icp-num" href="http://www.miitbeian.gov.cn/" target="_blank">京ICP备13028922</a>
+       调调 采用署名-非商业性使用-禁止演绎 4.0 <a class="zh" href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh" target="_blank">国际许可证协议</a> 进行许可</p>
      <p class="copyright">
         <span>数智云科技（北京）有限公司</span>
         <span class="phone-num">010-84922107</span> 北京市朝阳区姚家园东里中路14号院1号楼（中永嘉孵化器0023号）
-     </p> -->
+     </p>
    </div>
  </div>
 </div>
 <div class="bottombar"><div class="line"></div></div>
 <script type="text/javascript" src="js/jquery.js"></script>
-<!-- 上监控 -->
-<script type="text/javascript" src="//t.diaox2.com/view/test/lyf/profile2/scripts/reporter.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/index-09-16.js"></script>
 </body>
 </html>
