--- a/dd/subscribe.html
+++ b/dd/subscribe.html
@@ -30,7 +30,7 @@ var _hmt = _hmt || [];
 <li class="category f-l"><a href="zdm.html">值得买</a></li>
 <li class="category f-l"><a href="category/100003.html">分类</a></li>  
 <li class="category f-l"><a href="s-result.html?q=礼物">礼物</a></li>
-<li class="category f-l current-page"><a href="subscribe.html">资讯订阅</a></li> 
+<li class="category f-l current-page"><a href="subscribe.html#login">资讯订阅</a></li> 
 <li class="down-app f-l">
 <i class="header-app-icon"></i>
 <a target="_blank" href="download.html">下载APP</a></li>  
@@ -67,15 +67,19 @@ var _hmt = _hmt || [];
         <div class="input-box">
             <input type="text" name="username" class="username" placeholder="账户名">
             <input type="password" name="password" class="password" placeholder="密码">
+            <div class="subscribe-desc-box">
+                <input type="checkbox" name="desc" class="subscribe-desc" id="input-box-desc" checked>
+                <label for="input-box-desc">订阅信息每月5元</label>
+            </div>
         </div>
     </div>
     <div class="button-area">
         <div class="button-box">
-            <input type="button" value="登录" class="login-btn" style="font-family:微软雅黑">
+            <input type="button" value="确认支付开通订阅" class="login-btn" style="font-family:微软雅黑">
             <input type="button" value="注册帐号" class="regist-btn" style="font-family:微软雅黑">
         </div>
     </div>
-    <h3 class="subscribe-tip">订阅信息每月5元</h3>
+    <!-- <h3 class="subscribe-tip">订阅信息每月5元</h3> -->
 </div>
 
 <div class="regist-area">
@@ -93,196 +97,51 @@ var _hmt = _hmt || [];
             <input type="password" name="password" class="password" placeholder="请填写6-20位字符，由字母和数字组成">
             <label for="repwd">确认密码</label>
             <input type="password" name="repwd" class="repwd" placeholder="密码">
+            <div class="subscribe-desc-box">
+                <input type="checkbox" name="regist-desc" class="subscribe-desc" id="regist-input-box-desc" checked>
+                <label for="regist-input-box-desc" class="subscribe-desc-label">订阅信息每月5元</label>
+            </div>
         </div>
+        
     </div>
     <div class="button-area">
         <div class="button-box">
-            <input type="button" value="注册" class="regist-btn regist-regist-btn" style="font-family:微软雅黑">
+            <input type="button" value="确认支付开通订阅" class="regist-btn regist-regist-btn" style="font-family:微软雅黑">
         </div>
     </div>
-    <h3 class="subscribe-tip">订阅信息每月5元</h3>
+    <!-- <h3 class="subscribe-tip">订阅信息每月5元</h3> -->
+</div>
+
+<div class="subscribe-main-content" id="subscribe-main-content">
+    <p >付费功能正在建设，请耐心等待~</p>
+    <a href="index.html" target="_self">返回首页</a>
 </div>
 
 
-<ul class="result-list" id="result-list">
+  <!--   <ul class="result-list" id="result-list">
+        <li class="result-item clearfix">
+            <a target="_blank" href="http://www.diaox2.com/article/3742.html">
+                <div class="img-container f-l loading">
+                    <img src="images/subscribe/3742.jpg" alt="" height="188" width="188">    
+                    <span class="outdate-tag disnone">已过期</span>
+                </div>
+                <div class="result-detail f-l">
+                    <p class="result-title">身体弱还不运动，简直没法救</p>
+                <p class="result-content" style="word-wrap: break-word;">
+                    蹲下
+                </p>
+                <ul class="result-footer clearfix">
+                    <li class="date f-l">2015-11-04</li>
+                    <li class="source f-l"></li>
+                    <li class="view-result f-r">
+                        <p>查看详情</p>
+                    </li>
+                </ul>
+            </div>
+        </a>
+    </li>
+   </ul> -->
 
-<li class="result-item clearfix ">
-    <a target="_blank" href="http://www.diaox2.com/article/3742.html">
-        <div class="img-container f-l loading">
-            <img src="images/subscribe/3742.jpg" alt="" height="188" width="188">
-            <span class="outdate-tag disnone">已过期</span>
-        </div>
-        <div class="result-detail f-l">
-            <p class="result-title">身体弱还不运动，简直没法救</p>
-            <!-- <p class="result-price"></p> -->
-            <p class="result-content" style="word-wrap: break-word;">蹲下，起不来。躺下，腿不能抬。跑两步，嗯？跑不动我当教练很多年，总结出了三个极具代表性的功能表现来定义“身体素质极差”，蹲下站不起来——肌肉力量差，躺地上抬不起腿——核心控制能力差</p>
-            <ul class="result-footer clearfix">
-                <li class="date f-l">2015-11-04</li>
-                <li class="source f-l"></li>
-                <li class="view-result f-r">
-                    <p>查看详情</p>
-                </li>
-            </ul>
-        </div>
-    </a>
-</li>
-
-<li class="result-item clearfix ">
-    <a target="_blank" href="http://www.diaox2.com/article/4977.html">
-        <div class="img-container f-l loading">
-            <img src="images/subscribe/4977.jpg" alt="" height="188" width="188">
-            <span class="outdate-tag disnone">已过期</span>
-        </div>
-        <div class="result-detail f-l">
-            <p class="result-title">紧身胸衣，女人的性感特权</p>
-            <!-- <p class="result-price"></p> -->
-            <p class="result-content" style="word-wrap: break-word;">你想没想过，每天穿在身上的贴身内衣，可是几个世纪以来的“爱恨情仇”呢！西方女士真正的内衣概念的出现，是伴随着颇受争议的一样东西——紧身内衣而来的。著名的复古性感女郎Dita的美，很大程度上就来源于那紧身胸衣下的细腰。</p>
-            <ul class="result-footer clearfix">
-                <li class="date f-l">2016-03-04</li>
-                <li class="source f-l"></li>
-                <li class="view-result f-r">
-                    <p>查看详情</p>
-                </li>
-                <li class="buylink_site f-r"></li>
-            </ul>
-        </div>
-    </a>
-</li>
-
-<li class="result-item clearfix ">
-    <a target="_blank" href="http://www.diaox2.com/article/5120.html">
-        <div class="img-container f-l loading">
-            <img src="images/subscribe/5120.jpg" alt="" height="188" width="188">
-            <span class="outdate-tag disnone">已过期</span>
-        </div>
-        <div class="result-detail f-l">
-            <p class="result-title">7天用了60个套套，精尽人亡也要告诉你哪个最好</p>
-            <!-- <p class="result-price"></p> -->
-            <p class="result-content" style="word-wrap: break-word;">避孕套，又名安全套。最早可以追溯到公元前1000年，古埃及人开始使用羊和猪的膀胱当作安全套，用以防范性病（怪不得你们古埃及没有延续到现在）。必须承认，避孕套这一人类历史上最伟大的发明，自其应用开始，就将性从繁衍后代这一用途中解救出来，彻底解放了爱情。想要寻找其中趣味却又不想弄出人命的爱侣眷人，亦可享受稳定而舒适的激情。</p>
-            <ul class="result-footer clearfix">
-                <li class="date f-l">2016-02-14</li>
-                <li class="source f-l"></li>
-                <li class="view-result f-r">
-                    <p>查看详情</p>
-                </li>
-                <li class="buylink_site f-r"></li>
-            </ul>
-        </div>
-    </a>
-</li>
-
-<li class="result-item clearfix ">
-    <a target="_blank" href="http://www.diaox2.com/article/5331.html">
-        <div class="img-container f-l loading">
-            <img src="images/subscribe/5331.jpg" alt="" height="188" width="188">
-            <span class="outdate-tag disnone">已过期</span>
-        </div>
-        <div class="result-detail f-l">
-            <p class="result-title">不去健身房？家庭健身全攻略送你！</p>
-            <!-- <p class="result-price"></p> -->
-            <p class="result-content" style="word-wrap: break-word;">目前家庭健身的人群似乎越来越多了，但是家庭健身和去健身房健身最大的差别就是氛围、环境、器材条件上的差距，在健身房有健身房的玩法，在家练习可能会被条件所限从而在健身程度上有缺陷，所以选择家庭健身的朋友一定要明确自己目的！</p>
-            <ul class="result-footer clearfix">
-                <li class="date f-l">2016-03-02</li>
-                <li class="source f-l"></li>
-                <li class="view-result f-r">
-                    <p>查看详情</p>
-                </li>
-                <li class="buylink_site f-r"></li>
-            </ul>
-        </div>
-    </a>
-</li>
-
-<li class="result-item clearfix ">
-    <a target="_blank" href="http://www.diaox2.com/article/5315.html">
-        <div class="img-container f-l loading">
-            <img src="images/subscribe/5315.jpg" alt="" height="188" width="188">
-            <span class="outdate-tag disnone">已过期</span>
-        </div>
-        <div class="result-detail f-l">
-            <p class="result-title">BBC书单评选：本世纪最好的20本小说</p>
-            <!-- <p class="result-price"></p> -->
-            <p class="result-content" style="word-wrap: break-word;">BBC国际网站文化板块曾邀请了数十位美国书评人参与评选新世纪迄今为止最好的小说，最终他们选出了20部佳作，多米尼加裔美国作家朱诺·迪亚斯的《奥斯卡·瓦奥短暂而奇妙的一生》名列榜首。</p>
-            <ul class="result-footer clearfix">
-                <li class="date f-l">2016-02-27</li>
-                <li class="source f-l"></li>
-                <li class="view-result f-r">
-                    <p>查看详情</p>
-                </li>
-                <li class="buylink_site f-r"></li>
-            </ul>
-        </div>
-    </a>
-</li>
-
-
-<li class="result-item clearfix ">
-    <a target="_blank" href="http://www.diaox2.com/article/5337.html">
-        <div class="img-container f-l loading">
-            <img src="images/subscribe/5337.jpg" alt="" height="188" width="188">
-            <span class="outdate-tag disnone">已过期</span>
-        </div>
-        <div class="result-detail f-l">
-            <p class="result-title">130片姨妈巾试用，告诉你谁是真正的妇女之友</p>
-            <!-- <p class="result-price"></p> -->
-            <p class="result-content" style="word-wrap: break-word;">千呼万唤始出来，犹抱姨妈巾半遮面。恩，让广大女性期盼已久的姨妈巾评测结果终于来了！猴赛雷~之前，准确的说是去年年末，我司对公司内部所有女性员工进行了内部调查，了解了大家正在使用的、用过的各种姨妈巾。随后，我们又搜罗了市面上常见的几款中高端卫生巾，然后便大刀阔斧地开始召集人马评测了（戳这里，看姨妈巾评测招募）。</p>
-            <ul class="result-footer clearfix">
-                <li class="date f-l">2016-03-08</li>
-                <li class="source f-l"></li>
-                <li class="view-result f-r">
-                    <p>查看详情</p>
-                </li>
-                <li class="buylink_site f-r"></li>
-            </ul>
-        </div>
-    </a>
-</li>
-
-<li class="result-item clearfix ">
-    <a target="_blank" href="http://www.diaox2.com/article/5347.html">
-        <div class="img-container f-l loading">
-            <img src="images/subscribe/5347.jpg" alt="" height="188" width="188">
-            <span class="outdate-tag disnone">已过期</span>
-        </div>
-        <div class="result-detail f-l">
-            <p class="result-title">吃饭前要先拍照的你，快来跟Ins达人学习拍食物！</p>
-            <!-- <p class="result-price"></p> -->
-            <p class="result-content" style="word-wrap: break-word;">看见食物时第一件事是先拿出手机，相信不少读者都跟小编一样已经把这个动作变成直觉性反应了吧！为了拍出一张能上传Instagram的照片，总是不准大家开动，左试右试、甚至站起来只为取到完美角度；在家做饭、烤蛋糕时，也常常为了要拍成品而忙的焦头烂额，修图花掉的时间都比料理的时间还久！</p>
-            <ul class="result-footer clearfix">
-                <li class="date f-l">2016-03-03</li>
-                <li class="source f-l"></li>
-                <li class="view-result f-r">
-                    <p>查看详情</p>
-                </li>
-                <li class="buylink_site f-r"></li>
-            </ul>
-        </div>
-    </a>
-</li>
-
-<li class="result-item clearfix ">
-    <a target="_blank" href="http://www.diaox2.com/article/5394.html">
-        <div class="img-container f-l loading">
-            <img src="images/subscribe/5394.jpg" alt="" height="188" width="188">
-            <span class="outdate-tag disnone">已过期</span>
-        </div>
-        <div class="result-detail f-l">
-            <p class="result-title">2016日本最全赏樱指南，带上这份攻略避开人山人海</p>
-            <!-- <p class="result-price"></p> -->
-            <p class="result-content" style="word-wrap: break-word;">我们的春天虽然已经姗姗到来，但小飞君心心念念的却是霓虹国的春天。因为，日本的樱花季来临了！这可是有官方权威消息源的哦：日本气象株式会社发布了2016年第一波樱花开放时间预测——日本樱花季由南到北约从3月到5月逐渐来临。</p>
-            <ul class="result-footer clearfix">
-                <li class="date f-l">2016-03-06</li>
-                <li class="source f-l"></li>
-                <li class="view-result f-r">
-                    <p>查看详情</p>
-                </li>
-                <li class="buylink_site f-r"></li>
-            </ul>
-        </div>
-    </a>
-</li>
-
-</ul>
 </div>
 <!-- 左侧热门区 -->
 <div class="hot-topics-area f-l">
@@ -321,7 +180,7 @@ var _hmt = _hmt || [];
 
 </div>
 <script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/jquery.dotdotdot.js"></script>
+<!-- <script type="text/javascript" src="js/jquery.dotdotdot.js"></script> -->
 <script type="text/javascript" src="js/subscribe.js"></script>
 </body>
 </html>
