--- a/dd/index.html
+++ b/dd/index.html
@@ -102,17 +102,10 @@ var _hmt = _hmt || [];
     <div class="about-us-area f-l">
       <h2>关于我们</h2>
       <ul>
-      <!-- 这他妈的要注意了，已经出现了2次问题了，为什么不把它改好呢？ -->
         <li><a href="about.html" target="_blank">关于有调</a></li>
         <li><a href="about.html#bd" target="_blank">商务合作</a></li>
         <li><a href="about.html#joinus" target="_blank">加入我们</a></li>
         <li><a href="about.html#team" target="_blank">团队专访</a></li>
-
-         <!-- <li><a href="new_about.html" target="_blank">关于有调</a></li>
-        <li><a href="new_about.html#bd" target="_blank">商务合作</a></li>
-        <li><a href="new_about.html#joinus" target="_blank">加入我们</a></li>
-        <li><a href="new_about.html#team" target="_blank">团队专访</a></li> -->
-
       </ul>
     </div>
     <div class="about-us-area2 f-l">
@@ -128,14 +121,7 @@ var _hmt = _hmt || [];
      </ul>
    </div>
    </div>
-   <div class="footer-bottom">
-   <a href="http://www.miitbeian.gov.cn/">京ICP备13028922</a>
-    <!--  <p class="site-name"><span class="cicle-c">©</span>有调2016 <a class="icp-num" href="http://www.miitbeian.gov.cn/" target="_blank">京ICP备13028922</a>
-       有调 采用署名-非商业性使用-禁止演绎 4.0 <a class="zh" href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh" target="_blank">国际许可证协议</a> 进行许可</p>
-     <p class="copyright">
-        <span>数智云科技（北京）有限公司</span>
-        <span class="phone-num">010-84922107</span> 北京市朝阳区姚家园东里中路14号院1号楼（中永嘉孵化器0023号）
-     </p> -->
+   <div class="footer-bottom"><a href="http://www.miitbeian.gov.cn/">京ICP备13028922</a>
    </div>
  </div>
 </div>
