--- a/dd/zdm.html
+++ b/dd/zdm.html
@@ -94,7 +94,7 @@
         </div>
     </div>
     <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/jquery.dotdotdot.js"></script>
+    <!-- <script type="text/javascript" src="js/jquery.dotdotdot.js"></script> -->
     <!-- 上监控 -->
     <script type="text/javascript" src="//t.diaox2.com/view/test/lyf/profile2/scripts/reporter.js"></script>
     <script type="text/javascript" src="js/zdm.js"></script>
