PC首页显示活动的文章；fix首页下方分页码active状态没有包住页码的问题；值得买卡片支持了多行描述；值得买换用了v4接口；值得买去掉了dotdotdot库

--- a/dd/zdm.html
+++ b/dd/zdm.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="content-type" content="text/html;charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="renderer" content="webkit|ie-stand">
-    <link rel="icon" href="http://a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
-    <meta name=description content="有调DIAOX2.COM,讲述精致生活,推荐品质好物。找到最值得买的品牌好物,海淘折扣,介绍使用经验和体验测评,推荐新奇有趣礼物,送男女朋友父母长辈,介绍全球美食和旅游攻略,分类页提供家具品牌,生活用品,电器,办公文具,时尚单品,化妆品,护理保湿,数码产品,母婴用品和户外装备的品牌,价格,评测信息">
-    <meta name="keywords" content="有调,DIAOX2.COM,品质生活方式,值得买,推荐礼物,海淘折扣,使用经验,评测,测评,旅游攻略,吃喝指南,家具,生活用品,家用电器,办公文具,时尚单品,护理保湿,数码产品,母婴用品,户外装备">
-    <link rel="stylesheet" type="text/css" href="css/zdm.css">
-    <title>值得买</title>
-    <script type="text/javascript">
-  var _hmt = _hmt||[];(function() {var hm = document.createElement("script");hm.src = "//hm.baidu.com/hm.js?a3e886fbe5e5db18814a35ef70f81457";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();</script>
+<meta charset="UTF-8">
+<meta http-equiv="content-type" content="text/html;charset=UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+<meta name="renderer" content="webkit">
+<link rel="dns-prefetch" href="//a.diaox2.com">
+<link rel="dns-prefetch" href="//search.image.alimmdn.com">
+<link rel="dns-prefetch" href="//api.diaox2.com">
+<link rel="dns-prefetch" href="//c.diaox2.com">
+<link rel="icon" href="http://a.diaox2.com/cms/diaodiao/assets/favicon.ico" type="image/x-icon">
+<meta name=description content="有调DIAOX2.COM,讲述精致生活,推荐品质好物。找到最值得买的品牌好物,海淘折扣,介绍使用经验和体验测评,推荐新奇有趣礼物,送男女朋友父母长辈,介绍全球美食和旅游攻略,分类页提供家具品牌,生活用品,电器,办公文具,时尚单品,化妆品,护理保湿,数码产品,母婴用品和户外装备的品牌,价格,评测信息">
+<meta name="keywords" content="有调,DIAOX2.COM,品质生活方式,值得买,推荐礼物,海淘折扣,使用经验,评测,测评,旅游攻略,吃喝指南,家具,生活用品,家用电器,办公文具,时尚单品,护理保湿,数码产品,母婴用品,户外装备">
+<link rel="stylesheet" type="text/css" href="css/zdm.css">
+<title>值得买</title>
+<script type="text/javascript">
+var _hmt = _hmt||[];(function() {var hm = document.createElement("script");hm.src = "//hm.baidu.com/hm.js?a3e886fbe5e5db18814a35ef70f81457";var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s);})();</script>
 </head>
 <body>
     <div class="wrapper">
